# instagram-web-django

./: db.sqlite3  pyproject.toml
common/: models.py
config/: settings.py  urls.py
feeds/: admin.py  models.py  serializers.py  urls.py  views.py
feeds/migrations/: 0001_initial.py  0002_initial.py  0003_rename_author_feed_user.py
reviews/: admin.py  models.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_initial.py  0003_rename_reviewer_review_user.py  0004_remove_review_feed.py  0005_review_feed.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
