[tool.poetry]
name = "instagram-web-django"
version = "0.1.0"
description = ""
authors = ["백관열 <djm030@naver.com>"]
readme = "README.md"
packages = [{include = "instagram_web_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
